crates/pardosa-schema/tests/compile_fail/hashmap_in_enum.stderr
error: GenomeSafe: enum must be #[repr(u8)] for canonical encoding (GEN-0035:R4). Annotate the enum with `#[repr(u8)]` and give each variant an explicit discriminant literal (e.g. `Variant = 0`).
 --> tests/compile_fail/hashmap_in_enum.rs:4:6
  |
4 | enum Bad {
  |      ^^^
